z-index problem in header fixed

--- a/Frontend/Customer/app/public/assets/scss/theme/_menu.scss
+++ b/Frontend/Customer/app/public/assets/scss/theme/_menu.scss
@@ -2548,7 +2548,7 @@ header{
     height:35px;
     background:#f8f8f8;
     position: fixed;
-    z-index: 100;
+    z-index: 99;
     margin-top:70px;
     width:100%;
     box-shadow: 0px 0px 5px 0px rgba(153, 153, 153, 0.62);
